--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,36 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+* {
+  padding: 0;
+  margin: 0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.bg-main-container {
+  max-width: 120rem;
+  width: 84.6%;
+  height: 124.5rem;
+  display: flex;
+  flex-direction: row;
+  display: flex;
+  flex-direction: column;
+  padding-top: 158px;
+  margin-left: 15.6%;
+  padding-left: 2%;
+  background-color: #f8fafb;
+}
+
+@media screen and (max-width: 768px) {
+  .bg-main-container {
+    max-width: 120rem;
+    width: 100%;
+    height: 124.5rem;
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    flex-direction: column;
+    padding-top: 92px;
+    margin-left: 0%;
+    padding-left: 0%;
   }
 }
