--- a/src/app/StoriesDetailsElement/index.css
+++ b/src/app/StoriesDetailsElement/index.css
@@ -11,6 +11,8 @@ html {
 .image-slider-cont {
   width: 100%;
   background-size: cover;
+
+  z-index: -1;
 }
 
 .image-slider-cont-inner {
@@ -109,25 +111,29 @@ html {
   font-family: Urbanist;
   font-size: 1.25rem;
   font-weight: 600;
-  line-height: 1.5rem;
+
   letter-spacing: 0;
-  text-align: left;
+  text-align: center;
   width: 10.625rem;
   height: 3.6875rem;
   padding: 0.9375rem 1.25rem;
   gap: 0.625rem;
+  background: hsla(272, 100%, 97%, 1);
 }
 
 .stordetails-text-over-img-con {
+  background: hsla(0, 0%, 0%, 0.6);
+
+  padding-right: 20%;
 }
 
 .stordetails-topic-para {
   font-family: Urbanist;
   font-size: 2.5rem;
   font-weight: 700;
-  line-height: 3.75rem;
+
   letter-spacing: 0;
-  text-align: left;
+
   color: hsla(0, 0%, 100%, 1);
 }
 
@@ -150,7 +156,7 @@ html {
 
   .image-slider-cont-inner {
     background: hsla(0, 0%, 0%, 0.6);
-    opacity: 1;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -247,10 +253,11 @@ html {
     line-height: 1.5rem;
     letter-spacing: 0;
     text-align: left;
-    width: 10.625rem;
-    height: 3.6875rem;
+    width: 6.625rem;
+    height: 2.6875rem;
     padding: 0.9375rem 1.25rem;
     gap: 0.625rem;
+    background: hsla(272, 100%, 97%, 1);
   }
 
   .stordetails-text-over-img-con {
@@ -258,9 +265,9 @@ html {
 
   .stordetails-topic-para {
     font-family: Urbanist;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: 700;
-    line-height: 3.75rem;
+
     letter-spacing: 0;
     text-align: left;
     color: hsla(0, 0%, 100%, 1);
